<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckOutActivity">

    <TextView
        android:id="@+id/textView_profile_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@color/gold"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/Personal_Information"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="413dp"
        android:layout_height="645dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_profile_title">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardTotal"
                app:cardCornerRadius="12dp"
                app:cardElevation="12dp"
                android:padding="8dp"
                app:cardBackgroundColor="#1FA525"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TOTAL"
                        android:textSize="20sp"
                        android:fontFamily="sans-serif-black"
                        android:textColor="@color/white"
                        android:textAlignment="center"/>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="197dp"
                        android:src="@drawable/pay" />

                    <TextView
                        android:id="@+id/textView_checkout_totalamount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Ksh 1000"
                        android:fontFamily="sans-serif-black"
                        android:textColor="@color/white"
                        android:textAlignment="center"
                        android:textSize="20sp"/>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/mpesa_number"
                android:textAlignment="textStart"
                android:textColor="@color/gold"
                android:textSize="20dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardTotal" />

            <EditText
                android:id="@+id/editText_checkout_mpesa_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/inputbox"
                android:ems="10"
                android:hint="Eg. 0700766696"
                android:inputType="phone"
                android:padding="10dp"
                android:textSize="18dp"
                app:layout_constraintTop_toTopOf="@+id/textView14"
                tools:layout_editor_absoluteX="90dp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="18dp"
                android:text="Note, Once you click 'Make Payment', you will be prompted to enter your MPESA pin in order to complete your order."
                android:textColor="@color/black"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_checkout_mpesa_number" />

            <Button
                android:id="@+id/button_make_payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/custombtn"
                android:text="@string/make_payment"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView15" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>