<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/textView_profile_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="5dp"
        android:background="@color/gold"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:padding="10dp"
        android:text="Personal Information"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_profile_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="24dp"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_checkout_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.481"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/textView2" />


            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="36dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView_checkout_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/textView_checkout_username"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/phone"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView_checkout_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="92dp"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/textView_checkout_email"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                app:layout_constraintTop_toTopOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:text="Address"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/checkout_address"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/checkout_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/textView_checkout_phone"
                app:layout_constraintTop_toTopOf="@+id/textView11" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/editInfo"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custombtn"
        android:padding="10dp"
        android:text="Edit"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Logout"
        app:layout_constraintTop_toTopOf="@+id/Logout"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/Logout"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="224dp"
        android:background="@drawable/custombtn"
        android:padding="10dp"
        android:text="Log out"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/myBookings"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:background="@drawable/custombtn"
        android:padding="10dp"
        android:text="my bookings"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Logout"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="@+id/editInfo"
        app:layout_constraintTop_toBottomOf="@+id/editInfo"
        app:layout_constraintVertical_bias="0.267" />


</androidx.constraintlayout.widget.ConstraintLayout>