<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="40dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/text_view_editInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-black"
            android:text="Register"
            android:textColor="@color/teal_200"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.054"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText_edit_fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/inputbox"
            android:drawableLeft="@drawable/person"
            android:ems="10"
            android:hint="First Name"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="40dp"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="@+id/text_view_editInfo"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/text_view_editInfo"
            app:layout_constraintTop_toBottomOf="@+id/text_view_editInfo" />


        <EditText
            android:id="@+id/edit_text_edit_lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/inputbox"
            android:drawableLeft="@drawable/person"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="40dp"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="@+id/editText_edit_fname"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editText_edit_fname"
            app:layout_constraintTop_toBottomOf="@+id/editText_edit_fname" />

        <Button
            android:id="@+id/edit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="116dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/custombtn"
            android:text="@string/register"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/editText_reg_confirm_password"
            app:layout_constraintStart_toStartOf="@+id/editText_reg_confirm_password"
            app:layout_constraintTop_toBottomOf="@+id/editText_reg_confirm_password" />

        <EditText
            android:id="@+id/editText_edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/inputbox"
            android:ems="10"
            android:layout_marginRight="32dp"
            android:drawableLeft="@drawable/iphone"
            android:layout_marginLeft="32dp"
            android:hint="@string/phone_number"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="40dp"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="@+id/edit_text_edit_lname"
            app:layout_constraintHorizontal_bias="0.325"
            app:layout_constraintStart_toStartOf="@+id/edit_text_edit_lname"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_edit_lname" />

        <EditText
            android:id="@+id/editText_edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/inputbox"
            android:drawableLeft="@drawable/email_icon"
            android:ems="10"
            android:hint="Email"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="40dp"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="@+id/editText_edit_phone"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editText_edit_phone"
            app:layout_constraintTop_toBottomOf="@+id/editText_edit_phone" />

        <EditText
            android:id="@+id/editText_reg_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/inputbox"
            android:drawableLeft="@drawable/pass"
            android:ems="10"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:hint="Password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="40dp"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="@+id/editText_edit_email"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editText_edit_email"
            app:layout_constraintTop_toBottomOf="@+id/editText_edit_email" />


        <EditText
            android:id="@+id/editText_reg_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/inputbox"
            android:drawableLeft="@drawable/pass"
            android:ems="10"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:hint="Confirm Password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="40dp"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="@+id/editText_reg_password"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editText_reg_password"
            app:layout_constraintTop_toBottomOf="@+id/editText_reg_password" />

        <EditText
            android:id="@+id/edit_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="28dp"
            android:background="@drawable/inputbox"
            android:drawableLeft="@drawable/address_icon"
            android:ems="10"
            android:hint="Address, Eg: Nairobi, Usiu Road 00800"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="40dp"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/edit_button"
            app:layout_constraintEnd_toEndOf="@+id/editText_reg_confirm_password"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editText_reg_confirm_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>